--- a/scss/components/_icons.scss
+++ b/scss/components/_icons.scss
@@ -4,14 +4,18 @@
 .icon-bi-bookmark-plus-after {@include icon-bi($bi-bookmark-plus,true);}
 .icon-bi-bookmark-dash-fill {@include icon-bi($bi-bookmark-dash-fill);}
 .icon-bi-bookmark-dash-fill-after {@include icon-bi($bi-bookmark-dash-fill,true);}
-.icon-bi-x-circle-fill {@include icon-bi($bi-x-circle-fill);}
-.icon-bi-x-circle-fill-after {@include icon-bi($bi-x-circle-fill,true);}
-.icon-bi-search {@include icon-bi($bi-search);}
-.icon-bi-search-after {@include icon-bi($bi-search,true);}
+.icon-bi-info-circle {@include icon-bi($bi-info-circle);}
+.icon-bi-info-circle-after {@include icon-bi($bi-info-circle,true);}
 .icon-bi-funnel {@include icon-bi($bi-funnel);}
 .icon-bi-funnel-after {@include icon-bi($bi-funnel,true);}
 .icon-bi-funnel-fill {@include icon-bi($bi-funnel-fill);}
 .icon-bi-funnel-fill-after {@include icon-bi($bi-funnel-fill,true);}
+.icon-bi-x-circle-fill {@include icon-bi($bi-x-circle-fill);}
+.icon-bi-x-circle-fill-after {@include icon-bi($bi-x-circle-fill,true);}
+.icon-bi-search {@include icon-bi($bi-search);}
+.icon-bi-search-after {@include icon-bi($bi-search,true);}
+.icon-bi-arrow-right-short {@include icon-bi($bi-arrow-right-short);}
+.icon-bi-arrow-right-short-after {@include icon-bi($bi-arrow-right-short,true);}
 
 .icon-bi {
   font-family: 'bootstrap-icons' !important;;
